--- a/notebooks/python_basics/01_Python.ipynb
+++ b/notebooks/python_basics/01_Python.ipynb
@@ -1199,7 +1199,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('.venv': poetry)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1213,7 +1213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.14"
+   "version": "3.10.11"
   },
   "vscode": {
    "interpreter": {
@@ -1222,5 +1222,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
