--- a/notebooks/python_basics/02_Numpy.ipynb
+++ b/notebooks/python_basics/02_Numpy.ipynb
@@ -876,7 +876,8 @@
    },
    "outputs": [],
    "source": [
-    "print(arr[:5:-2])"
+    "print(arr[:5:-2])\n",
+    "#Отрицательный шаг, начинающийся с конца массива автоматически до 5 элемента  "
    ]
   },
   {
@@ -916,7 +917,8 @@
    "outputs": [],
    "source": [
     "data = list(range(10))\n",
-    "print(data)\n",
+    "\n",
+    "print(data[::-1])\n",
     "\n",
     "# TODO - [9, 8, 7, 6, 5, 4, 3, 2, 1, 0]"
    ]
@@ -958,7 +960,7 @@
    "outputs": [],
    "source": [
     "data = list(range(10))\n",
-    "print(data)\n",
+    "print(data[1:8:])\n",
     "\n",
     "# TODO - [1, 2, 3, 4, 5, 6, 7]"
    ]
@@ -1340,8 +1342,10 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "data = np.random.randint(low=0, high=10, size=(5, 6))\n",
     "print(data)\n",
+    "print(data[1:4, 1:5])\n",
     "\n",
     "# TODO - центральная часть массива размером (3, 4)"
    ]
@@ -1389,7 +1393,11 @@
    "outputs": [],
    "source": [
     "data = np.random.randint(low=0, high=10, size=(3, 6))\n",
-    "print(data)\n",
+    "print(data, '\\n')\n",
+    "\n",
+    "cols = np.random.permutation( (range(6)))\n",
+    "print(cols, '\\n')\n",
+    "print(data[:, cols])\n",
     "\n",
     "# TODO - такой же массив, но со случайной перестановкой колонок"
    ]
@@ -1599,7 +1607,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('.venv': poetry)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1613,7 +1621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.14"
+   "version": "3.10.11"
   },
   "vscode": {
    "interpreter": {
@@ -1622,5 +1630,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
