--- a/notebooks/python_basics/03_Numpy.ipynb
+++ b/notebooks/python_basics/03_Numpy.ipynb
@@ -933,7 +933,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('.venv': poetry)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -947,7 +947,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.14"
+   "version": "3.10.11"
   },
   "vscode": {
    "interpreter": {
@@ -956,5 +956,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
