--- a/notebooks/python_basics/03_Numpy.ipynb
+++ b/notebooks/python_basics/03_Numpy.ipynb
@@ -229,9 +229,20 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "arr = np.array([[1, 2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12]])\n",
     "print(arr)\n",
     "\n",
+    "print('----------')\n",
+    "\n",
+    "result_1 = arr > 5\n",
+    "result_2 = arr < 8\n",
+    "print(result_1)\n",
+    "print(result_2)\n",
+    "\n",
+    "print('----------')\n",
+    "\n",
+    "print(np.any(result_1 & result_2))\n",
     "# TODO - определить, имеется ли в массиве хотя бы один элемент, \n",
     "#           отвечающий условию больше пяти и меньше восьми"
    ]
@@ -920,6 +931,9 @@
    "source": [
     "data = np.random.randint(low=0, high=5, size=(3, 6))\n",
     "print(data)\n",
+    "print('-----------------')\n",
+    "\n",
+    "print(np.sum(data, axis=0))\n",
     "\n",
     "# TODO - вектор сумм элементов по каждому столбцу"
    ]
