--- a/notebooks/python_basics/04_Numpy.ipynb
+++ b/notebooks/python_basics/04_Numpy.ipynb
@@ -343,26 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "_cell_id": "3n8fEkJftRkcB0tZ",
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
-    "executionInfo": {
-     "elapsed": 9786,
-     "status": "ok",
-     "timestamp": 1598902936557,
-     "user": {
-      "displayName": "Alexey Devyatkin",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GjZicdeEga0uI_adjvPG_ydk4aC9pHcJhRxHdlu=s64",
-      "userId": "01450359895113891365"
-     },
-     "user_tz": -180
-    },
-    "id": "gCclW4LGMYUA",
-    "outputId": "0eb46602-898b-4c67-899a-07ba5bfda2ba"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "x = np.ones((1, 3, 2))\n",
@@ -568,7 +549,7 @@
    },
    "outputs": [],
    "source": [
-    "print(arr.reshape((2, 10)))\n",
+    "v\n",
     "print(arr.reshape((5, 4)))\n",
     "print(arr.reshape((20, 1)))"
    ]
@@ -754,6 +735,8 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "x = np.arange(9).reshape((3, 3))\n",
     "y = np.arange(12).reshape((3, 4))\n",
     "z = np.arange(15).reshape((3, 5))\n",
@@ -762,6 +745,7 @@
     "print(y)\n",
     "print(z)\n",
     "\n",
+    "print(np.concatenate((x, y,z), axis=1))\n",
     "# TODO - получите объединенный массив:\n",
     "# [[ 0  1  2  0  1  2  3  0  1  2  3  4]\n",
     "#  [ 3  4  5  4  5  6  7  5  6  7  8  9]\n",
@@ -804,8 +788,11 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "x = np.arange(1, 10).reshape((3, 3))\n",
-    "print(x)\n",
+    "y = np.ones((3, 1)).astype(int)\n",
+    "\n",
+    "print(np.concatenate((y, x), axis=1))\n",
     "\n",
     "# TODO - получить матрицу со столбцом единиц слева\n",
     "# [[1 1 2 3]\n",
@@ -942,6 +929,7 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "arr = np.array([\n",
     "    [11, -1, 1, 3, 5],\n",
     "    [6, 1, 0, -1, 10],\n",
@@ -949,7 +937,8 @@
     "    [5, 2, 7, 8, 9],\n",
     "])\n",
     "\n",
-    "print(arr)\n",
+    "print(np.argmax(arr, 0))\n",
+    "print(np.argmin(arr, 0))\n",
     "\n",
     "# TODO - напишите код поиска индексов максимальных/минимальных \n",
     "#           элементов в массиве по столбцам: [0 2 3 3 1]/[2 0 1 1 0]"
@@ -980,7 +969,7 @@
     "    [1, 3, 2, 3, 5],\n",
     "    [5, 2, 7, 8, 9],\n",
     "])\n",
-    "print(arr)\n",
+    "print(np.sort(arr, axis = 0))\n",
     "\n",
     "# TODO - напишите код сортировки:\n",
     "# [[ 1  2  0 -1  5]\n",
@@ -1016,6 +1005,7 @@
    },
    "outputs": [],
    "source": [
+    "print(np.random.randint(-10, 20, size=(5, 7)))\n",
     "# TODO - создайте массив со случайными целочисленными элементами"
    ]
   },
@@ -1036,8 +1026,21 @@
    },
    "outputs": [],
    "source": [
-    "data = np.arange(1, 16).reshape((3, 5))\n",
-    "print(data)\n",
+    "import numpy as np\n",
+    "\n",
+    "matrix = np.arange(1, 16).reshape((3, 5))\n",
+    "\n",
+    "# Установка рамки из нулей\n",
+    "y = np.zeros((3,1), int)\n",
+    "\n",
+    "matrix1 = np.concatenate((matrix, y), axis=1)\n",
+    "matrix2 = np.concatenate((y, matrix1), axis=1)\n",
+    "\n",
+    "x = np.zeros((1,7), int)\n",
+    "matrix3 = np.concatenate((matrix2, x), axis=0)\n",
+    "matrix4 = np.concatenate((x, matrix3), axis=0)\n",
+    "print(matrix4)\n",
+    "\n",
     "\n",
     "# TODO - реализуйте добавление нулей со всех сторон массива:\n",
     "# [[ 0  0  0  0  0  0  0]\n",
@@ -1065,7 +1068,7 @@
    "outputs": [],
    "source": [
     "data = np.arange(1, 16).reshape((3, 5))\n",
-    "print(data)\n",
+    "print(np.clip(data, 2, 6))\n",
     "\n",
     "# TODO - ограничьте значения массива\n",
     "# [[2 2 3 4 5]\n",
@@ -1093,6 +1096,11 @@
     "data = np.full((3, 5), fill_value=2, dtype=np.int32)\n",
     "print(data)\n",
     "\n",
+    "columns = np.arange(data.shape[1])  # Создаем массив индексов столбцов\n",
+    "\n",
+    "exponents_matrix = np.power(data, columns)  # Возведение в степень индекса колонки\n",
+    "\n",
+    "print(exponents_matrix)\n",
     "# TODO - возведите значения в колонках в степень индекса колонки\n",
     "# [[ 1  2  4  8 16]\n",
     "#  [ 1  2  4  8 16]\n",
@@ -1117,7 +1125,11 @@
    "outputs": [],
    "source": [
     "data = np.full((3, 5), fill_value=2, dtype=np.int32)\n",
-    "print(data)\n",
+    "columns = np.arange(data.shape[1])  # Создаем массив индексов столбцов\n",
+    "\n",
+    "exponents_matrix = np.multiply(data, columns) \n",
+    "\n",
+    "print(exponents_matrix)\n",
     "\n",
     "# TODO - Умножьте каждый столбец на свой индекс\n",
     "# [[0 2 4 6 8]\n",
@@ -1144,6 +1156,11 @@
    "source": [
     "data = np.repeat(np.arange(1, 8), 4).reshape(7, 4)\n",
     "vec = np.array([1, 2, 1, 2])\n",
+    "\n",
+    "for i in range(data.shape[0]):\n",
+    "    if i % 2 != 1:  # Проверяем, чётная ли строка\n",
+    "        data[i] *= vec\n",
+    "\n",
     "print(data)\n",
     "\n",
     "# TODO - умножьте каждый четный ряд в матрице на вектор\n",
@@ -1177,7 +1194,10 @@
     "                [ 7, 25, 23,  3, 22, 15],\n",
     "                [ 8, 16,  9, 22,  0,  9],\n",
     "                [ 4, 24, 24, 28,  3, 40]])\n",
-    "print(data)\n",
+    "\n",
+    "print(np.argsort(-data, axis=1)[:, :2])\n",
+    "\n",
+    "\n",
     "\n",
     "# TODO - определите индексы двух наибольших элементов по каждому ряду\n",
     "# [[4 1]\n",
@@ -1233,7 +1253,10 @@
     "                [ 7, 25, 23,  3, 22, 15],\n",
     "                [ 8, 16,  9, 22,  0,  9],\n",
     "                [ 4, 24, 24, 28,  3, 40]])\n",
-    "print(data)\n",
+    "\n",
+    "num = data.shape[1]\n",
+    "random_index = np.random.choice(num, size=2, replace=False)\n",
+    "print(data[:, random_index])\n",
     "\n",
     "# TODO - выберите случайные две колонки из массива\n",
     "# *Например,\n",
@@ -1261,7 +1284,15 @@
    "outputs": [],
    "source": [
     "data = np.arange(9).reshape(3, 3)\n",
-    "print(data)\n",
+    "rows = np.tile(data, (4, 1)) \n",
+    "\n",
+    "np.random.shuffle(rows)\n",
+    "\n",
+    "\n",
+    "result = rows[:10, :]\n",
+    "\n",
+    "\n",
+    "print(result)\n",
     "\n",
     "# TODO - создайте массив из повторяющихся рядов размером (10, 3)\n",
     "# *Например,\n",
@@ -1299,7 +1330,7 @@
     "                [ 8, 16,  9, 22,  0,  9],\n",
     "                [ 14, 9,  33, 21,  7,  6],\n",
     "                [ 4, 24, 24, 28,  3, 40]])\n",
-    "print(data)\n",
+    "print(data[1:4, [2, 4]])\n",
     "# TODO - соберите матрицу из конкретных элементов массива\n",
     "# [[23 22]\n",
     "#  [ 9  0]\n",
@@ -1345,6 +1376,7 @@
     "                [ 8, 16,  9, 22,  0,  9],\n",
     "                [ 14, 9,  33, 21,  7,  6],\n",
     "                [ 4, 24, 24, 28,  3, 40]])\n",
+    "data[:, -2:] = data[:, -2:][::-1]\n",
     "print(data)\n",
     "# TODO - инвертируйте порядок последних двух колонок\n",
     "# [[20 22  2 14  3 40]\n",
@@ -1371,7 +1403,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('.venv': poetry)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1385,7 +1417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.14"
+   "version": "3.10.11"
   },
   "vscode": {
    "interpreter": {
@@ -1394,5 +1426,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
