--- a/notebooks/python_basics/07_Pandas.ipynb
+++ b/notebooks/python_basics/07_Pandas.ipynb
@@ -2176,6 +2176,11 @@
   "interpreter": {
    "hash": "a4f60baab10fba59fece84098e84620134308d8d27de6ca0fa68d1c22a6654b7"
   },
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -2186,9 +2191,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.14"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
