--- a/notebooks/python_basics/06_Pandas.ipynb
+++ b/notebooks/python_basics/06_Pandas.ipynb
@@ -973,7 +973,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('.venv': poetry)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -987,7 +987,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.14"
+   "version": "3.10.11"
   },
   "vscode": {
    "interpreter": {
@@ -996,5 +996,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
