--- a/notebooks/python_basics/06_Pandas.ipynb
+++ b/notebooks/python_basics/06_Pandas.ipynb
@@ -222,8 +222,15 @@
    },
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "# TODO\n",
-    "arr = np.random.randint(0, 10, size=(5, 3))"
+    "arr = np.random.randint(0, 10, size=(5, 3))\n",
+    "index = ('A', 'B', 'C', 'D', 'E')\n",
+    "columns = ('col_1', 'col_2', 'col_3')\n",
+    "df = pd.DataFrame(data = arr, index = index, columns = columns)\n",
+    "# Фреймы удобнее отображать с помощью встроенных средств Jupyter\n",
+    "print(df)"
    ]
   },
   {
@@ -939,7 +946,9 @@
     "    'feature3': 'string',\n",
     "}\n",
     "df = pd.DataFrame(data, index=list('ABCDEFGHIJKLMNO'))\n",
-    "df.head()"
+    "subset = df.loc['C':'I', ['feature1', 'feature3']]\n",
+    "print(subset)\n",
+    "df.head()\n"
    ]
   },
   {
