--- a/notebooks/python_basics/07_Pandas.ipynb
+++ b/notebooks/python_basics/07_Pandas.ipynb
@@ -189,11 +189,16 @@
    },
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "df = pd.DataFrame(\n",
     "    data=np.random.randint(0, 10, size=(15, 3)), \n",
     "    columns=['x1', 'x2', 'x3']\n",
     ")\n",
-    "df.head(3)"
+    "\n",
+    "filtered_df = df[(df['x1'] > 3) & (df['x3'] < 8)]\n",
+    "\n",
+    "print(filtered_df)\n"
    ]
   },
   {
@@ -261,7 +266,10 @@
     "    [[1, 2, 6], [5, 1, 1], [8, 4, 6], [4, 1, 1], [9, 9, 0], [-1, 2, 1], [5, 5, 5]],\n",
     "    columns = ['x1', 'x2', 'x3']\n",
     ")\n",
-    "df"
+    "\n",
+    "filtered_df = df.query('x1 > x3')\n",
+    "\n",
+    "print(filtered_df)"
    ]
   },
   {
@@ -727,7 +735,14 @@
     "    index=['A', 'B', 'C', 'D', 'E'], \n",
     "    columns=['x1', 'x2', 'x3']\n",
     ")\n",
-    "df"
+    "df.rename(\n",
+    "    columns={\n",
+    "        'x1': 'new_name_for_x1',\n",
+    "        'x3': 'that_not_x3'\n",
+    "    },\n",
+    "    inplace=True\n",
+    ")\n",
+    "print(df)"
    ]
   },
   {
@@ -1291,7 +1306,9 @@
     "df = pd.DataFrame(np.array(([1, 2, 3], [4, 5, 6], [7, 8, 9])),\n",
     "                  index=['dog in house', 'cat in house', 'pig in farm'],\n",
     "                  columns=['x1', 'x2', 'x3'])\n",
-    "df"
+    "\n",
+    "filtered_df = df.filter(like='house', axis=0)\n",
+    "print(filtered_df)"
    ]
   },
   {
@@ -1430,7 +1447,10 @@
     "    np.random.randint(0, 20, size=(5, 5)), \n",
     "    columns=['col1', 'col2', 'col3', 'col4', 'col5']\n",
     ")\n",
-    "df"
+    "\n",
+    "sorted_df = df.iloc[2].sort_values(ascending=False)\n",
+    "\n",
+    "print(sorted_df)"
    ]
   },
   {
@@ -1662,6 +1682,15 @@
     "df = pd.DataFrame({\n",
     "    'quality': [ 7, 67, 21, 38,  2, -2, 79, 22,  5, 31, 77, 72, 23, 64, 99]\n",
     "})\n",
+    "\n",
+    "df['quality'] = pd.cut(\n",
+    "    x=df['quality'],\n",
+    "    bins=[-2, 20, 45, 85, 100],\n",
+    "    labels=['ploho', 'sredne', 'horosho', 'otlichno'],\n",
+    "    include_lowest=True)\n",
+    "\n",
+    "print(df)\n",
+    "\n",
     "df.head()"
    ]
   },
@@ -1836,6 +1865,9 @@
     "df = pd.DataFrame(\n",
     "    ([1, 2, 3], [4, 5, 6], [7, 8, 9]), \n",
     "    columns=['x1', 'x2', 'x3'])\n",
+    "\n",
+    "row_means = df.mean(axis=1)\n",
+    "print(row_means)\n",
     "df"
    ]
   },
@@ -2149,6 +2181,10 @@
     "    'x2': np.random.choice(['low', 'high', 'medium'], size=(200, )),\n",
     "    'x3': np.random.randint(-20, 30, size=(200, )),\n",
     "})\n",
+    "\n",
+    "grouped_data = df.groupby('x2').agg({'x1': 'median', 'x3': 'max'})\n",
+    "print(grouped_data)\n",
+    "\n",
     "df.head()"
    ]
   },
