--- a/notebooks/python_basics/00_Python.ipynb
+++ b/notebooks/python_basics/00_Python.ipynb
@@ -329,6 +329,13 @@
    },
    "outputs": [],
    "source": [
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "help(np.linspace)\n",
+    "\n",
+    "mas, step = np.linspace(0, 100, num=51, endpoint=True, retstep=True, dtype=int)\n",
+    "print(f'масив чисел:\\n{mas}', '\\n',f'шаг: {step}')\n",
     "# TODO - вот здесь можете убрать этот комментарий и выполнить задание!)"
    ]
   },
@@ -728,6 +735,8 @@
    },
    "outputs": [],
    "source": [
+    "var_list = [1, '111']\n",
+    "var_list.index('1')\n",
     "# TODO"
    ]
   },
@@ -814,7 +823,10 @@
    },
    "outputs": [],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "var_list = [1, '111']\n",
+    "var_list[1] = 501\n",
+    "print(var_list)"
    ]
   },
   {
@@ -936,7 +948,19 @@
    },
    "outputs": [],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "var_dict = {\n",
+    "    'Логин': 'пользователь1',\n",
+    "    'пароль': '1488'\n",
+    "            }\n",
+    "\n",
+    "new_dict = {\n",
+    "    'Логин': 'пользователь1',\n",
+    "    'пароль': '1312'\n",
+    "            }\n",
+    "print(var_dict)\n",
+    "var_dict.update(new_dict)\n",
+    "print(var_dict)"
    ]
   },
   {
@@ -999,6 +1023,18 @@
    },
    "outputs": [],
    "source": [
+    "var_set = {\n",
+    "    'no, keys',\n",
+    "    'only unique values!'\n",
+    "}\n",
+    "\n",
+    "new_set = {\n",
+    "    'new_value',\n",
+    "    'only unique values!'\n",
+    "}\n",
+    "print(var_set | new_set)\n",
+    "print(var_set & new_set)\n",
+    "\n",
     "# TODO"
    ]
   },
