--- a/notebooks/python_basics/00_Python.ipynb
+++ b/notebooks/python_basics/00_Python.ipynb
@@ -761,6 +761,9 @@
    },
    "outputs": [],
    "source": [
+    "var_list = [1, '111']\n",
+    "var_list.append('1')\n",
+    "var_list.index('1')\n",
     "# TODO"
    ]
   },
